# ask-xDD

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  backend.py  chtc_interactive.sub  demo.py  deploy.py  docker-compose-fb768.yml  docker-compose.yml  fine_tune_mt0.ipynb  llm_eval_dash.py  main.py  patch_pargraph_order.py  pdf_parser.py  preprocessing.py  pyproject.toml  requirements.txt  train.py  working.ipynb
.devcontainer/: devcontainer.json  devcontainer_huge.json  docker-compose.yml  post-create.sh  requirements.txt
askem/: data.py  deploy.py  elastic.py  embeddings.py  generator.py  ingest_docs.py  ingest_v2.py  init_class.py  models.py  old_app.py  openai.py  pdf.py  preprocessing.py  preprocessor.py  retriever.py  summarizer.py  terms_extractor.py  utils.py
chtc/: Dockerfile  job.sub
data/: benchmark.db  bertqa_finetuned.parquet  covid_50_paragraphs.txt  gpt_bench.parquet  longt5_zeroshot.parquet  petal_bench.csv  petal_bench.parquet
db/: faiss_document_store.db  faiss_index.faiss  faiss_index.json
docs/: datasets.md
experiments/: cluster.ipynb  qa_v1.ipynb  segmentation_v1.ipynb
notebooks/: eval_bertqa_finetuned.ipynb  eval_longt5_zeroshot.ipynb  eval_ta1_draft.ipynb  generator_interface.ipynb  hybrid_seach_get_terms.ipynb  make_benchmark_petal.ipynb  mixtral_paraphraser.ipynb  patch_db_capitalized_terms.ipynb  patch_terms_more_than_one_cap_stragegy.ipynb  prototype_hybrid_elastic_search.ipynb  remove_duplicates_in_weaviate.ipynb  retriever_interface.ipynb  showcase_bertqa_finetuned.ipynb  (+2 more)
(+97 files in other folders)
