[project]
name = "askem"
description = "xdd-askem project"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dynamic = ["version"]
authors = [
    { name = "Jason Lo", email = "jason.lo@wisc.edu" }
]
dependencies = [
    "weaviate-client==3.25.3",
    "farm-haystack==1.16.1",
    "pydantic>2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "askem/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  ".vscode",
  ".gitignore",
  "/chtc",
  ".devcontainer",
  "/data",
  "notebooks",
  "scripts",
  "tests",
  ".env",
  ".git",
  ".gitattributes",
  ".pre-commit-config.yaml",
  "docker-compose.yml",
  "working.ipynb",
]
